# stm-data-collection

./: .gitignore  .gitmodules  BenchData.hs  Benchmark.hs  BenchmarkPQ.hs  LICENSE  README.md  bench.sh  pqbench.sh  stm-data-collection.cabal
PriorityQueue/: PriorityQueue.hs  Test.hs  test.sh
PriorityQueue/Internals/: HeapPQ.hs  LinkedPCGSkipListPQ.hs  LinkedPCGperThreadSLPQ.hs  LinkedSkipListPQ.hs  ListPQ.hs  TArrayPCGSeedPerThreadSLPQ.hs  TArrayPCGSkipListPQ.hs  TArrayPCGperThreadSLPQ.hs  TArraySkipListPQ.hs  THeapPQ.hs  TListPQ.hs
benchmarks/: BagBench.hs  BenchData.hs  Benchmark.hs  PriorityQueueBench.hs  RandomBench.hs  bagbench.sh  bench.sh  capbench.sh  findFactor.sh  pqbench.sh  pqperf.sh
benchmarks/cbits/: gettime.c
charts/: capcharts.sh  capcharts.tex  charts.tex
misc/: bench.sh  counter-benchmark.hs  counter-benchmark.sh  counter-results.csv
priority-queue/: Benchmark.hs  BenchmarkPQ.hs  HeapPriorityQueue.hs  ImplTest.hs  LinkedPCGSkipListPQ.hs  LinkedPCGperThreadSLPQ.hs  LinkedSkipListPQ.hs  ListPriorityQueue.hs  PriorityQueue.hs  TArrayPCGSkipListPQ.hs  TArrayPCGperThreadSLPQ.hs  TArraySkipListPQ.hs  THeapPriorityQueue.hs  TListPriorityQueue.hs  TSkipListPQ.hs  Test.hs  Tester.hs  bench.sh  onebench.sh  test.sh
priority-queue/Internal/: HeapPQ.hs  HeapPriorityQueue.hs  LinkedPCGSkipListPQ.hs  LinkedPCGperThreadSLPQ.hs  LinkedSkipListPQ.hs  ListPQ.hs  TArrayPCGSkipListPQ.hs  TArrayPCGperThreadSLPQ.hs  TArraySkipListPQ.hs  THeapPQ.hs  THeapPriorityQueue.hs  TListPQ.hs
src/Data/STM/: Bag.hs  PriorityQueue.hs
src/Data/STM/Bag/: Class.hs
src/Data/STM/Bag/Internal/: ListBag.hs  PTLB.hs  PTTLB.hs  RoundRobinBag.hs  TListBag.hs
src/Data/STM/PriorityQueue/: Class.hs
src/Data/STM/PriorityQueue/Internal/: HeapPQ.hs  LLSLPQ.hs  ListPQ.hs  PTRLLSLPQ.hs  PTRTASLPQ.hs  PTSTASLPQ.hs  TASLPQ.hs  THeapPQ.hs  TListPQ.hs
tests/: BagAPITests.hs  BagTests.hs  PriorityQueueAPITests.hs  PriorityQueueTests.hs
utils/: after-fresh-clone.sh  cabal-add-sources.sh  hackage-docs.sh
