
name:                   stm-data-collection
version:                0.1.0.0
-- synopsis:
-- description:
license:                BSD3
license-file:           LICENSE
author:                 Alex Semin
maintainer:             alllex.semin@gmail.com
-- copyright:
category:               Data
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

library
  exposed-modules:      Data.STM.PriorityQueue.Class,
                        Data.STM.Bag.Class

  other-modules:        Data.STM.PriorityQueue.Internal.ListPQ,
                        Data.STM.PriorityQueue.Internal.TListPQ,
                        Data.STM.PriorityQueue.Internal.HeapPQ,
                        Data.STM.PriorityQueue.Internal.THeapPQ,
                        Data.STM.PriorityQueue.Internal.TASLPQ,
                        Data.STM.PriorityQueue.Internal.LLSLPQ,
                        Data.STM.PriorityQueue.Internal.PTRTASLPQ,
                        Data.STM.PriorityQueue.Internal.PTRLLSLPQ,
                        Data.STM.PriorityQueue.Internal.PTSTASLPQ,

                        Data.STM.Bag.Internal.ListBag,
                        Data.STM.Bag.Internal.TListBag,
                        Data.STM.Bag.Internal.RoundRobinBag,
                        Data.STM.Bag.Internal.PTLB,
                        Data.STM.Bag.Internal.PTTLB

  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.2 && <0.3
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields

test-suite pq-tests
  type:                 exitcode-stdio-1.0
  main-is:              PriorityQueueTests.hs
  hs-source-dirs:       tests, src
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.2 && <0.3,
                        -- tests specific dependencies
                        hspec >=2.1 && <2.2, QuickCheck >=2.8 && <2.9
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields

benchmark pq-bench
  type:                 exitcode-stdio-1.0
  main-is:              PriorityQueueBench.hs
  hs-source-dirs:       benchmarks, src
  c-sources:            benchmarks/cbits/gettime.c
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.2 && <0.3,
                        -- benchmark specific dependencies
                        optparse-applicative >=0.11 && <0.12
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields -eventlog

test-suite bag-tests
  type:                 exitcode-stdio-1.0
  main-is:              BagTests.hs
  hs-source-dirs:       tests, src
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.2 && <0.3,
                        -- tests specific dependencies
                        hspec >=2.1 && <2.2, QuickCheck >=2.8 && <2.9
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields -debug

benchmark bag-bench
  type:                 exitcode-stdio-1.0
  main-is:              BagBench.hs
  hs-source-dirs:       benchmarks, src
  c-sources:            benchmarks/cbits/gettime.c
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.2 && <0.3,
                        -- benchmark specific dependencies
                        optparse-applicative >=0.11 && <0.12
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields -eventlog
