
name:                   stm-data-collection
version:                0.1.0.0
synopsis:               Collection of STM-based Data Structures
description:
    Package provides implementation of different data structures,
    relying on STM (https:\/\/hackage.haskell.org\/package\/stm) for safe
    and flexible concurrency.
    .
    There are several implemenations for each data structure. The reason is that
    the concrete one should be chosen depending on use-case. Description of
    cons and pros may be found in corresponding documentation. Some of the modules
    also provide parameterized constructors which must be imported separately and
    used with care.
license:                BSD3
license-file:           LICENSE
author:                 Alex Semin, Ryan Yates
maintainer:             alllex.semin@gmail.com
copyright:              (c) 2015 Alex Semin <alllex.semin@gmail.com>
category:               Data
build-type:             Simple
cabal-version:          >=1.10

source-repository head
  type:     git
  location: git://github.com/alllex/stm-data-collection.git

library
  exposed-modules:
                        Data.STM.PriorityQueue,
                        Data.STM.PriorityQueue.Class,
                        Data.STM.PriorityQueue.Internal.HeapPQ,
                        Data.STM.PriorityQueue.Internal.THeapPQ,
                        Data.STM.PriorityQueue.Internal.TASLPQ,
                        Data.STM.PriorityQueue.Internal.LLSLPQ,
                        Data.STM.PriorityQueue.Internal.PTRTASLPQ,
                        Data.STM.PriorityQueue.Internal.PTRLLSLPQ,
                        Data.STM.PriorityQueue.Internal.PTSTASLPQ,

                        Data.STM.Bag,
                        Data.STM.Bag.Class,
                        Data.STM.Bag.Internal.ListBag,
                        Data.STM.Bag.Internal.TListBag,
                        Data.STM.Bag.Internal.RoundRobinBag,
                        Data.STM.Bag.Internal.PTLB,
                        Data.STM.Bag.Internal.PTTLB

  other-modules:        Data.STM.PriorityQueue.Internal.ListPQ,
                        Data.STM.PriorityQueue.Internal.TListPQ

  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.1.3.2 && <0.3
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields

test-suite pq-tests
  type:                 exitcode-stdio-1.0
  main-is:              PriorityQueueTests.hs
  hs-source-dirs:       tests, src
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.1.3.2 && <0.3,
                        -- tests specific dependencies
                        hspec >=2.1 && <2.2, QuickCheck >=2.8 && <2.9
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields

benchmark pq-bench
  type:                 exitcode-stdio-1.0
  main-is:              PriorityQueueBench.hs
  hs-source-dirs:       benchmarks, src
  c-sources:            benchmarks/cbits/gettime.c
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.1.3.2 && <0.3,
                        -- benchmark specific dependencies
                        optparse-applicative >=0.11 && <0.12
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields

test-suite pq-api-tests
  type:                 exitcode-stdio-1.0
  main-is:              PriorityQueueAPITests.hs
  hs-source-dirs:       tests, src
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.1.3.2 && <0.4
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields

test-suite bag-tests
  type:                 exitcode-stdio-1.0
  main-is:              BagTests.hs
  hs-source-dirs:       tests, src
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.1.3.2 && <0.3,
                        -- tests specific dependencies
                        hspec >=2.1 && <2.2, QuickCheck >=2.8 && <2.9
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields

benchmark bag-bench
  type:                 exitcode-stdio-1.0
  main-is:              BagBench.hs
  hs-source-dirs:       benchmarks, src
  c-sources:            benchmarks/cbits/gettime.c
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.1.3.2 && <0.3,
                        -- benchmark specific dependencies
                        optparse-applicative >=0.11 && <0.12
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields

test-suite bag-api-tests
  type:                 exitcode-stdio-1.0
  main-is:              BagAPITests.hs
  hs-source-dirs:       tests, src
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <4.9, stm >=2.4 && <2.5,
                        array >=0.5 && <0.6, vector >=0.10 && <0.12,
                        random >=1.1 && <1.2, pcg-random >=0.1.3.2 && <0.4
  ghc-options:          -Wall -O2 -threaded -rtsopts -fno-omit-yields
